[project]
name = "iceax"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "42zoko9", email = "hexproof1988@gmail.com" }
]
dependencies = [
    "numpy>=1.25.2",
    "pandas>=2.1.0",
    "matplotlib>=3.7.2",
    "seaborn>=0.12.2",
    "japanize-matplotlib>=1.1.3",
    "ipython>=8.15.0",
]
readme = "README.md"
requires-python = ">= 3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "tox>=4.11.1",
]

[tool.hatch.metadata]
allow-direct-references = true
